[DEV] Add Login operation

--- a/src/Model/Entity/config/User.orm.yml
+++ b/src/Model/Entity/config/User.orm.yml
@@ -7,7 +7,11 @@ USaq\Model\Entity\User:
       generator:
         strategy: AUTO
   fields:
-    mail:
+    username:
+      type: string
+      unique: true
+    password:
       type: string
     nickname:
       type: string
+      nullable: true
