[DEV] Add Login operation

--- a/src/Model/Entity/config/Token.orm.yml
+++ b/src/Model/Entity/config/Token.orm.yml
@@ -9,7 +9,10 @@ USaq\Model\Entity\Token:
   fields:
     tokenString:
       type: string
-      name: token_string
+      column: token_string
+    expireAt:
+      type: datetime
+      column: expire_at
   oneToOne:
     user:
       targetEntity: User
