--- a/tests/functional.suite.yml
+++ b/tests/functional.suite.yml
@@ -10,10 +10,10 @@ modules:
     enabled:
         # add a framework module here
         - Doctrine2:
-            connection_callback: ['\Test\USaq\DoctrineApplicationTest', 'getEntityManager']
+            connection_callback: ['\USaq\Facade\Persistence', 'getFacadeRoot']
             cleanup: true # All doctrine queries will be wrapped in a transaction, which will be rolled back at the end of each test
         - \Herloct\Codeception\Module\Slim:
-            container: tests/_data/TestContainerBootstrap.php
+            container: tests/_data/container-bootstrap.php
         - REST:
             depends: \Herloct\Codeception\Module\Slim
             part: Json
