--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,12 @@
 .rocketeer/
 
 # Cache
-cache/*
-!cache/.gitkeep
+cache/container/*
+!cache/container/.gitkeep
+cache/doctrine/metadata/*
+!cache/doctrine/metadata/.gitkeep
+cache/doctrine/proxies/*
+!cache/doctrine/proxies/.gitkeep
 
 # Logs
 logs/*
