--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,10 @@
         "respect/validation": "^1.0",
         "doctrine/orm": "^2.5",
         "vlucas/phpdotenv": "^2.4",
-        "symfony/yaml": "^3.0"
+        "symfony/yaml": "^3.0",
+        "crell/api-problem": "^2.0",
+        "gofabian/negotiation-middleware": "^0.1.2",
+        "tuupola/cors-middleware": "^0.5.0"
     },
     "require-dev": {
         "codeception/codeception": "^2.3",
