--- a/composer.json
+++ b/composer.json
@@ -44,9 +44,7 @@
     },
     "scripts": {
         "serve": "php -S 0.0.0.0:8000 -t public public/index.php",
-        "ser": "robo dev:serve",
-        "test": "robo dev:test",
-        "abc": "php app/console.php dev:test",
-        "fix": "php app/console.php dev:fix"
+        "test": "php app/console.php dev:test",
+        "fix": "php app/console.php dev:fix src"
     }
 }
