[DEV] Add Authentication middleware

--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,7 @@
     },
     "scripts": {
         "serve": "php -S 0.0.0.0:8000 -t public public/index.php",
-        "test": "php app/console.php dev:test",
-        "fix": "php app/console.php dev:fix src"
+        "test": "php app/console.php development:test",
+        "fix": "php app/console.php development:fix"
     }
 }
