--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
         "consolidation/robo": "^1.0",
         "crell/api-problem": "^2.0",
         "gofabian/negotiation-middleware": "^0.1.2",
-        "tuupola/cors-middleware": "^0.5.0"
+        "tuupola/cors-middleware": "^0.5.0",
+        "doctrine/migrations": "^1.5"
     },
     "require-dev": {
         "codeception/codeception": "^2.3",
