--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,6 @@
 # Env files
 .env
 
-# Rocketeer deployment
-.rocketeer/
-
 # Cache
 cache/container/*
 !cache/container/.gitkeep
@@ -15,13 +12,14 @@ cache/doctrine/metadata/*
 cache/doctrine/proxies/*
 !cache/doctrine/proxies/.gitkeep
 
-# Logs
-logs/*
-!logs/.gitkeep
-
 # Storage folders
 storage/database/*
 !storage/database/.gitkeep
+
+# Logs
+storage/logs/*
+!storage/logs/.gitkeep
+
 
 # Composer Vendor
 vendor/
