--- a/migrations.yml
+++ b/migrations.yml
@@ -1,4 +1,4 @@
 name: USaq Migrations
-migrations_namespace: USaq\Migrations
-table_name: doctrine_migration_versions
-migrations_directory: /src/Migrations
+migrations_namespace: USaq\App\Migrations
+table_name: usaq_migration_versions
+migrations_directory: /src/App/Migrations
