--- a/tests/functional.suite.yml
+++ b/tests/functional.suite.yml
@@ -9,6 +9,7 @@ actor: FunctionalTester
 modules:
     enabled:
         # add a framework module here
+        - Asserts
         - Doctrine2:
             connection_callback: ['\USaq\StaticProxy\Persistence', 'getStaticProxyRoot']
             cleanup: true # All doctrine queries will be wrapped in a transaction, which will be rolled back at the end of each test
@@ -18,3 +19,8 @@ modules:
             depends: \Herloct\Codeception\Module\Slim
             part: Json
         - \Test\Helper\Functional
+gherkin:
+    contexts:
+        default:
+            - \Test\FunctionalTester
+            - \Test\Step\Functional\FriendsSteps
