--- a/.gitignore
+++ b/.gitignore
@@ -13,13 +13,12 @@ cache/doctrine/proxies/*
 !cache/doctrine/proxies/.gitkeep
 
 # Storage folders
-storage/database/*
-!storage/database/.gitkeep
+var/database/*
+!var/database/.gitkeep
 
 # Logs
-storage/logs/*
-!storage/logs/.gitkeep
-
+var/logs/*
+!var/logs/.gitkeep
 
 # Composer Vendor
 vendor/
